fix styling to align with reference PS frontend

--- a/delegates/dom/src/assets/css/player.css
+++ b/delegates/dom/src/assets/css/player.css
@@ -1,18 +1,12 @@
 :root {
 	/*Using colour scheme https://color.adobe.com/TD-Colors---Option-3-color-theme-10394433/*/
-	--colour1: #2B3A42;
-	--colour2: #242424;
-	--colour3: #BDD4DE;
-	--colour4: #3c3b40;
-	--colour5: #0585fe;
-	--colour6: #0f0f0f;
-	--colour7: #2f2f2f;
-	--colour8: #151515;
-	--colour9: #808080;
-	--colour10: #FFFFFF;
-
-	--buttonFont: Arial;
-	--inputFont: Arial;
+	--colour1:#000000;
+	--colour2:#FFFFFF;
+	--colour3:#0585fe;
+	--colour4:#35b350;
+	--colour5:#ffab00;
+	--colour6:#1e1d22;
+	--colour7:#3c3b40;
 }
 
 .noselect {
@@ -73,7 +67,7 @@ canvas {
 .spsUiTool .tooltiptext {
 	visibility: hidden;
 	width: auto;
-	color: var(--colour10);
+	color: var(--colour2);
 	text-align: center;
 	border-radius: 15px;
 	padding: 0px 10px;
@@ -118,7 +112,7 @@ canvas {
 	left: 0;
 	z-index: 20;
 	padding: 5px 10px;
-	border: 3px solid var(--colour5);
+	border: 3px solid var(--colour3);
 	width: max-content;
 }
 
@@ -165,7 +159,7 @@ object {
 #uiFeatures button {
 	background-color: var(--colour7);
 	border: 1px solid var(--colour7);
-	color: var(--colour10);
+	color: var(--colour2);
 	position: relative;
 	width: 3rem;
 	height: 3rem;
@@ -174,15 +168,15 @@ object {
 }
 
 #uiFeatures button:hover {
-	background-color: var(--colour5);
-	border: 3px solid var(--colour5);
+	background-color: var(--colour3);
+	border: 3px solid var(--colour3);
 	transition: 0.25s ease;
 	padding-left: 0.55rem;
 	padding-top: 0.55rem;
 }
 
 #uiFeatures button:active {
-	border: 3px solid var(--colour5);
+	border: 3px solid var(--colour3);
 	background-color: var(--colour7);
 	padding-left: 0.55rem;
 	padding-top: 0.55rem;
@@ -192,10 +186,10 @@ object {
 
 .btn-flat {
 	background-color: transparent;
-    color: var(--colour10);
+    color: var(--colour2);
     font-family: 'Montserrat';
 	font-weight: bold;
-    border: 3px solid var(--colour5);
+    border: 3px solid var(--colour3);
     border-radius: 1rem;
     font-size: 0.75rem;
 	padding-left: 0.5rem;
@@ -205,12 +199,12 @@ object {
 }
 
 .btn-flat:hover {
-	background-color: var(--colour5);
+	background-color: var(--colour3);
 	transition: ease 0.3s;
 }
 
 .btn-flat:disabled {
-	background: var(--colour4);
+	background: var(--colour7);
 	border-color: var(--colour3);
 	color: var(--colour3);
 	cursor: default;
@@ -306,7 +300,7 @@ object {
 	left: 0;
 	z-index: 20;
 	padding: 5px 10px;
-	border: 3px solid var(--colour5);
+	border: 3px solid var(--colour3);
 	width: max-content;
 }
 
@@ -320,7 +314,7 @@ object {
 }
 
 .settings-text {
-	color: var(--colour10);
+	color: var(--colour2);
 	vertical-align: middle;
 	font-weight: normal;
 }
@@ -333,14 +327,14 @@ object {
 #disconnectOverlay {
 	z-index: 30;
 	position: absolute;
-	color: var(--colour4);
+	color: var(--colour2);
 	font-size: 1.8em;
-	font-family: var(--inputFont);
 	width: 100%;
 	height: 100%;
 	background-color: black;
 	align-items: center;
 	justify-content: center;
+	text-transform: uppercase;
 
 }
 
@@ -484,25 +478,25 @@ img#playButton {
 	-webkit-transition: all .2s ease;
 	transition: all .2s ease;
 	background: var(--colour6);
-	border: 3px solid var(--colour4);
+	border: 3px solid var(--colour7);
 	border-radius: 2em;
 }
 
 .tgl-flat+.tgl-slider:after {
 	-webkit-transition: all .2s ease;
 	transition: all .2s ease;
-	background: var(--colour4);
+	background: var(--colour7);
 	content: "";
 	border-radius: 1em;
 }
 
 .tgl-flat:checked+.tgl-slider {
-	border: 3px solid var(--colour5);
+	border: 3px solid var(--colour3);
 }
 
 .tgl-flat:checked+.tgl-slider:after {
 	left: 50%;
-	background: var(--colour5);
+	background: var(--colour3);
 }
 
 /*** Toggle Switch styles ***/
@@ -517,15 +511,15 @@ img#playButton {
 /*** Form Controls ***/
 
 .form-control {
-	background-color: var(--colour4);
-	border: 2px solid var(--colour4);
+	background-color: var(--colour7);
+	border: 2px solid var(--colour7);
 	border-radius: 4px;
-	color: var(--colour10);
+	color: var(--colour2);
 	text-align: right;
 }
 
 .form-control:hover {
-	border-color: var(--colour4);
+	border-color: var(--colour7);
 }
 
 .form-group {
@@ -620,7 +614,7 @@ section> :first-child {
 	background-color: var(--colour2);
 	font-family: var(--buttonFont);
 	font-weight: lighter;
-	color: var(--colour4);
+	color: var(--colour7);
 }
 
 .streamTools-shown>#streamToolsSettings,
@@ -644,7 +638,7 @@ section> :first-child {
 
 /* For SVG graphics paths */
 g {
-	fill: var(--colour10);
+	fill: var(--colour2);
 }
 
 /* STREAM TOOLS */
